--- a/CSS/Delicias.css
+++ b/CSS/Delicias.css
@@ -145,7 +145,7 @@ footer p {
     }
 
     .abajo {
-        flex-direction: column;
+        flex-direction: row;
         padding-bottom: 10px;
     }
 
