--- a/CSS/Sorpresa.css
+++ b/CSS/Sorpresa.css
@@ -92,3 +92,19 @@ main {
     width: 100px;
     margin-bottom: 10px;
 }
+
+@media (max-width: 768px) {
+    .arriba img {
+        height: 60px;
+        width: 60px;
+    }
+
+    .abajo {
+        flex-direction: row;
+        padding-bottom: 10px;
+    }
+
+    .abajo a {
+        margin: 5px 0;
+    }
+}
