--- a/CSS/Tu.css
+++ b/CSS/Tu.css
@@ -80,3 +80,19 @@ footer {
 footer p {
     padding: 5px;
 }
+
+@media (max-width: 768px) {
+    .arriba img {
+        height: 60px;
+        width: 60px;
+    }
+
+    .abajo {
+        flex-direction: row;
+        padding-bottom: 10px;
+    }
+
+    .abajo a {
+        margin: 5px 0;
+    }
+}
