--- a/CSS/Portada.css
+++ b/CSS/Portada.css
@@ -80,3 +80,18 @@ footer p {
     padding: 5px;
 }
 
+@media (max-width: 768px) {
+        .arriba img {
+        height: 95px;
+        width: 95px;
+    }
+
+    .abajo {
+        flex-direction: column;
+        padding-bottom: 10px;
+    }
+
+    .abajo a {
+        margin: 5px 0;
+    }
+}
