--- a/CSS/Tu.css
+++ b/CSS/Tu.css
@@ -89,7 +89,7 @@ footer p {
     }
 
     .abajo {
-        flex-direction: column;
+        flex-direction: row;
         padding-bottom: 10px;
     }
 
