--- a/CSS/Sorpresa.css
+++ b/CSS/Sorpresa.css
@@ -100,7 +100,7 @@ main {
     }
 
     .abajo {
-        flex-direction: column;
+        flex-direction: row;
         padding-bottom: 10px;
     }
 
