--- a/CSS/Tu.css
+++ b/CSS/Tu.css
@@ -95,4 +95,11 @@ footer p {
     .abajo a {
         margin: 5px 0;
     }
+
+    main h1{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
 }
