--- a/CSS/Portada.css
+++ b/CSS/Portada.css
@@ -95,4 +95,11 @@ footer p {
     .abajo a {
         margin: 5px 0;
     }
+
+    main img{
+    height: 315px;
+    align-self: center;
+    width: 315px;
+    padding: 5px;
+}
 }
